# sudoku-solver-rust-wasm

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
example/: index.html  sudoku.js
src/: lib.rs
