[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"
description = "A Sudoku solver"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.58"
wasm-bindgen-futures = "0.4.31"
